Fix car alignment and spacing (#9)

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.cdnfonts.com/css/barcade-brawl');
 
 :root {
-  --car-height: 800px; 
+  --car-height: 800px;
+  --car-width: 930px;
   --animation-duration: 25s;
   --sun-height: 800px;
   --display-font: 'Barcade Brawl', monospace;
@@ -113,7 +114,7 @@ nav li a {
   display: flex;
   width: max-content;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   animation: choochoo var(--animation-duration) infinite linear;
 }
 
@@ -121,6 +122,10 @@ nav li a {
   flex-shrink: 0;
   flex-grow: 0;
   width: 100vw;
+}
+
+.train .spacer {
+  width: calc(50vw + var(--sun-height)/2);
 }
 
 .train .sun {
@@ -131,7 +136,17 @@ nav li a {
 
 .train .car {
   height: var(--car-height);
+  width: var(--car-width);
+  object-fit: contain;
   cursor: pointer;
+}
+
+.train .caboose {
+  width: 1442px;
+  height: 902px;
+  margin-left: -180px;
+  margin-bottom: 35px;
+  z-index: -1;
 }
 
  .train:hover {
